Make sure the text truncation is also applied to the span elements (i.e.: disabled menu items).

--- a/public_html/bse-admin/css/admin.css
+++ b/public_html/bse-admin/css/admin.css
@@ -1650,7 +1650,8 @@ ul.menu li.active a {
     color: #fff;
 }
 
-ul.menu > li li > a {
+ul.menu > li li > a,
+ul.menu > li li > span {
     color: #222 !important;
     overflow: hidden;
     display: block;
